# aisyng-commons

./: README.md  pyproject.toml
aisyng/commons/embeddings/: embedding_service.py
tests/integration/: test_openai_embeddings.py
tests/unit/aisyng/commons/embeddings/: test_embeddings.py
